project('advent2015', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++2a'])

executable('1',
    '1.cpp',
    dependencies: [])

executable('2',
    '2.cpp',
    dependencies: [])

executable('3',
    '3.cpp',
    dependencies: [])

openssl = dependency('openssl')
executable('4',
    '4.cpp',
    dependencies: [openssl])

executable('5',
    '5.cpp',
    dependencies: [])